# OOP_Labs

./: CMakeLists.txt
lab1/: CMakeLists.txt  lab1_utils.cpp  main.cpp  test.cpp
lab1/include/: lab1_utils.h
lab1/src/: lab1_utils.cpp
lab1/test/: test.cpp
lab2/: CMakeLists.txt  main.cpp
lab2/include/: lab2_utils.h
lab2/src/: lab2_utils.cpp
lab2/test/: test.cpp
lab3/: CMakeLists.txt  Figure.cpp  Figure.hpp  Romb.cpp  Romb.hpp  main.cpp  program
lab3/include/: Figure.hpp  Hexagon.hpp  Pentagon.hpp  Romb.hpp
lab3/src/: Figure.cpp  Hexagon.cpp  Pentagon.cpp  Romb.cpp
lab3/test/: test.cpp
lab4/: CMakeLists.txt  main.cpp
lab4/include/: figures.hpp
lab4/src/: figures.cpp
lab4/test/: test.cpp
lab5/: CMakeLists.txt  lab5_main.cpp
lab5/include/: lab5.hpp
lab5/src/: lab5_func.cpp
lab5/test/: test.cpp
lab6/: CMakeLists.txt  main.cpp
lab6/include/: lab6.hpp
lab6/src/: lab6_utils.cpp
lab6/test/: test.cpp
lab7/: CMakeLists.txt  lab6  log.txt  main.cpp  survivors.txt
lab7/include/: lab7.hpp
lab7/src/: lab7_utils.cpp
lab7/test/: test.cpp
